Expose CORS node attribute

--- a/templates/default/web.xml.erb
+++ b/templates/default/web.xml.erb
@@ -470,27 +470,27 @@
         <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
         <init-param>
             <param-name>cors.allowed.origins</param-name>
-            <param-value>*</param-value>
+            <param-value><%= @allowed_origins %></param-value>
         </init-param>
         <init-param>
             <param-name>cors.allowed.methods</param-name>
-            <param-value>GET,POST,HEAD,OPTIONS,PUT,PATCH</param-value>
+            <param-value><%= @allowed_methods %></param-value>
         </init-param>
         <init-param>
             <param-name>cors.allowed.headers</param-name>
-            <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers</param-value>
+            <param-value><%= @allowed_headers %></param-value>
         </init-param>
         <init-param>
             <param-name>cors.exposed.headers</param-name>
-            <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials</param-value>
+            <param-value><%= @exposed_headers %></param-value>
         </init-param>
         <init-param>
             <param-name>cors.support.credentials</param-name>
-            <param-value>true</param-value>
+            <param-value><%= @credentials %></param-value>
         </init-param>
         <init-param>
             <param-name>cors.preflight.maxage</param-name>
-            <param-value>10</param-value>
+            <param-value><%= @preflight_maxage %></param-value>
         </init-param>
     </filter>
 <% end %>
