Make https connector optional

--- a/templates/default/server.xml.erb
+++ b/templates/default/server.xml.erb
@@ -97,6 +97,7 @@
          This connector uses the NIO implementation with the JSSE engine. When
          using the JSSE engine, the JSSE configuration attributes must be used.
     -->
+<% if @https_port %>
 
     <Connector port="<%= @https_port %>" protocol="org.apache.coyote.http11.Http11NioProtocol"
                SSLEnabled="true"
@@ -118,6 +119,7 @@
              <% end %>
     />
 
+<% end %>
     <!-- Define a SSL/TLS HTTP/1.1 Connector on port 8443 with HTTP/2
          This connector uses the APR/native implementation. When using the
          APR/native implementation or the OpenSSL engine with NIO or NIO2 then
