--- a/templates/default/server.xml.erb
+++ b/templates/default/server.xml.erb
@@ -81,6 +81,9 @@
              <% if @https_port %>
                redirectPort="<%= @https_port %>"
              <% end %>
+             <% if @max_http_header_size %>
+               maxHttpHeaderSize="<%= @max_http_header_size %>"
+             <% end %>
              />
     <!-- A "Connector" using the shared thread pool-->
     <!--
@@ -181,7 +184,7 @@
                referrals="follow"
                userBase="<%= @ldap_user_base %>"
                userSearch="<%= @ldap_user_search %>"
-               userSubtree="true" 
+               userSubtree="true"
                roleBase="<%= @ldap_role_base %>"
                roleName="cn"
                roleSearch="<%= @ldap_role_search %>"
