--- a/templates/default/9/server.xml.erb
+++ b/templates/default/9/server.xml.erb
@@ -66,7 +66,7 @@
          APR (HTTP/AJP) Connector: /docs/apr.html
          Define a non-SSL/TLS HTTP/1.1 Connector on port <%= @http_port %>
     -->
-    <Connector port="<%= @http_port %>" protocol="HTTP/1.1"
+    <Connector port="<%= @http_port %>" protocol="org.apache.coyote.http11.Http11Nio2Protocol"
                connectionTimeout="20000"
                URIEncoding="<%= @uriencoding %>"
              <% if @secure %>
